feat(senbonzakura): align Bankai blade rivers